--- a/trivera.css
+++ b/trivera.css
@@ -21,7 +21,8 @@ body, html {
 .container {
     background-color: white;
     padding: 20px;
-    
+    margin-left:10%;
+    margin-right:10%;    
 }
 
 header h1 {
@@ -39,8 +40,13 @@ header h1 {
 .service h2 {
     background-color: #e0e0e0; /* Light gray background */
     padding: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-radius: 5px;
     font-size: 16px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+h3 {
+margin-bottom: 0px;
 }
