--- a/trivera.css
+++ b/trivera.css
@@ -20,9 +20,16 @@ body, html {
 
 .container {
     background-color: white;
-    padding: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
     margin-left:10%;
-    margin-right:10%;    
+    margin-right:10%;  
+    display: flex;
+    flex-direction: column;  
+    justify-content: flex-start;
+}
+.what-we-do {
+    margin-bottom: -1%;
 }
 
 header h1 {
@@ -32,21 +39,59 @@ header h1 {
 
 .services {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr); 
     gap: 20px;
-    
+    justify-items: center; /* Center items within the grid columns */
 }
 
-.service h2 {
-    background-color: #e0e0e0; /* Light gray background */
+.service-orange {
     padding: 10px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background: linear-gradient(to right, #de7a20 6%, #ffffff 6%);
     border-radius: 5px;
     font-size: 16px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    max-width: 500px; /* Maximum width to ensure consistent size */
+    height: 100px; /* Fixed height for each box */
+
+}
+.service-blue {
+    padding: 10px;
+    background: linear-gradient(to right, #559fc3 6%, #ffffff 6%);
+    border-radius: 5px;
+    font-size: 16px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    max-width: 300px; /* Maximum width to ensure consistent size */
+    height: 200px; /* Fixed height for each box */
+
+}
+.service-green {
+    padding: 10px;
+    background: linear-gradient(to right, #88b652 6%, #ffffff 6%);
+    border-radius: 5px;
+    font-size: 16px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    max-width: 300px; /* Maximum width to ensure consistent size */
+    height: 200px; /* Fixed height for each box */
+
+}
+
+h2 {
+    
+    
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 10%; /* Adds space below the text container */
 }
 
 h3 {
 margin-bottom: 0px;
 }
+
+.container h3 {
+    align-self: flex-start; /* Aligns h3 to the left within the container */
+    width: 100%; /* Ensures h3 takes the full width of the container */
+    margin-left: 0; /* Resets any left margin to 0 */
+}
+
